apps/homepage/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: homepage
  hostnames:
    - home.tomerhanochi.com
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
